# radix_new

./: .gitignore  Cargo.toml
radix_column/: Cargo.toml
radix_column/src/: asbytes.rs  binarycolumn.rs  column.rs  columndata.rs  hashmap_buffer.rs  lib.rs  owned.rs  sliceref.rs
radix_operations/: Cargo.toml
radix_operations/src/: c_add.rs  c_addassign.rs  c_count.rs  c_eq.rs  c_gt.rs  c_gteq.rs  c_lt.rs  c_lteq.rs  c_max.rs  c_sum.rs  column_operations.rs  columnop.rs  dictionary.rs  ftype.rs  generic_functions_2.rs  generic_functions_3.rs  indexedmutcolumn.rs  indexedreadbinarycolumn.rs  indexedreadcolumn.rs  indexedupdatebinarycolumn.rs  indexedupdatecolumn.rs  insertbinarycolumn.rs  insertcolumn.rs  lib.rs  op.rs  signature.rs
src/: lib.rs
src/schema/: schema.rs
src/table/: column_buffer.rs  helpers.rs  mod.rs  partitionedtable.rs  table.rs  tableexpression.rs  tabletotable.rs
