[package]
name = "radix_new"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

[profile.test] 
#opt-level = 3

[dependencies]

#paste="1.0.0"
rayon="1.5.0"
prettytable-rs = "0.8.0"
#ahash="0.6"
radix_operations={ path = "radix_operations" }
radix_column={ path = "radix_column" }
num_cpus = "1.13.0"

